--- a/src/app/basic/activity/activity.component.html
+++ b/src/app/basic/activity/activity.component.html
@@ -15,11 +15,11 @@
                         <!-- Faq Section Start -->
                         <div class="rs-faq-part rs-about style1">
                             <div class="container">
-                                <div class="main-part">
-                                    <div class="faq-content" style="margin-top: 20px;">
+                                <div class="main-part" style="padding-top: 40pX !important;">
+                                    <div class="faq-content">
                                         <div class="accordion" id="accordionExample">
-                                            <div class="accordion-item card">
-                                                <div class="accordion-header card-header" id="headingOne">
+                                            <div class="accordion-item card ">
+                                                <div class="accordion-header card-header " id="headingOne">
                                                     <button class="accordion-button card-link" type="button"
                                                         data-bs-toggle="collapse" data-bs-target="#collapseOne"
                                                         aria-expanded="true" aria-controls="collapseOne">Clay
@@ -199,8 +199,8 @@
                         <!-- Faq Section Start -->
                         <div class="rs-faq-part rs-about style1">
                             <div class="container">
-                                <div class="main-part">
-                                    <div class="faq-content" style="margin-top: 20px;">
+                                <div class="main-part" style="padding-top: 40pX !important;">
+                                    <div class="faq-content">
                                         <div class="accordion" id="accordionExample">
 
                                             <div class="accordion-item card">
