--- a/src/app/home/section-courses/section-courses.component.html
+++ b/src/app/home/section-courses/section-courses.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
-                        routerLink="/department/kg" routerLinkActive="active"
+                        routerLink="/department/staff" routerLinkActive="active"
                             class="btn-link">&nbsp;KG</a></p>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
-                            routerLink="/department/kg" routerLinkActive="active"
+                            routerLink="/department/staff" routerLinkActive="active"
                             class="btn-link">Primary</a></p>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
-                            routerLink="/department/kg" routerLinkActive="active"
+                            routerLink="/department/staff" routerLinkActive="active"
                             class="btn-link">Secondary</a></p>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description">
-                        <a routerLink="/department/kg" routerLinkActive="active"
+                        <a routerLink="/department/staff" routerLinkActive="active"
                             class="btn-link">&nbsp;&nbsp;Higher Secondary</a>
                     </p>
                 </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
-                            routerLink="/department/kg" routerLinkActive="active"
+                            routerLink="/department/staff" routerLinkActive="active"
                             class="btn-link">&nbsp;&nbsp;Pri Primary</a></p>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
-                            routerLink="/department/kg" routerLinkActive="active"
+                            routerLink="/department/staff" routerLinkActive="active"
                             class="btn-link">&nbsp;Non-Teaching</a></p>
                 </div>
             </div>
