--- a/src/app/resource/result/result.component.html
+++ b/src/app/resource/result/result.component.html
@@ -1,54 +1,81 @@
 <app-header></app-header>
-<body class="defult-home">
-    <!-- Main content Start -->
-    <div class="main-content">
-        <style>
-            p {
-                text-align: justify;
-            }
-        </style>
-        <!-- Intro Courses -->
-        <section class="intro-section gray-bg pt-94 pb-100 md-pt-64 md-pb-70">
-            <div class="container">
-                <div class="row clearfix">
-                    
-                    <!-- Content Column -->
-                    <div class="col-lg-6 md-mb-50 mt-10">
-                        <!-- Intro Info Tabs-->
-                        <div class="intro-info-tabs">
 
-                            <div class="tab-content tabs-content" id="myTabContent">
-                                <div class="tab-pane tab fade show active" id="prod-overview" role="tabpanel"
-                                    aria-labelledby="prod-overview-tab">
-                                    <div class="content white-bg pt-30">
-                                        <!-- Cource Overview -->
-                                        <div class="course-overview">
-                                            <div class="inner-box">
-                                                <h4>Std 12th  Science Result 2021-22</h4>
-                                                
-                                                <img src="assets/images/cems/result.jpeg" alt="">
+<body class="defult-home">
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td,
+        th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+
+        .rs-degree.style1 .degree-wrap:before {
+            position: absolute;
+            content: '';
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.5;
+            background: linear-gradient(transparent, #fff);
+        }
+    </style>
+    <!-- Intro Courses -->
+    <section class="intro-section gray-bg pt-40 md-pt-64 md-pb-70">
+        <div class="course-overview ">
+            <div class="inner-box">
+                <div class="main-content">
+                    <style>
+                        .rs-about.style1 .notice-bord.style1 {
+                            margin-top: 0px;
+                        }
+                    </style>
+                    <!-- Faq Section Start -->
+                    <div class="rs-faq-part rs-about style1">
+                        <div class="container">
+                            <div class="main-part">
+                                <div class="faq-content">
+                                    <h4 class="pt-40">Result List</h4>
+
+                                    <h4 style="color: red;text-align: center;" *ngIf="resultData.length==0">
+                                        Data
+                                        Not Found !</h4>
+                                    <div class="accordion" id="accordionExample" *ngIf="resultData.length>0">
+
+                                        <div class="accordion-item card"
+                                            *ngFor="let r of resultData| paginate: {id:'listing1', itemsPerPage: 20, currentPage: pa };let i=index">
+                                            <div class="accordion-header card-header" id="headingOne" (click)="open(i)">
+                                                <button class="accordion-button card-link" type="button"
+                                                    data-bs-target="#collapseOne" aria-expanded="true"
+                                                    aria-controls="collapseOne">{{r.title}}</button>
+                                            </div>
+                                            <div id="collapseOne" class="accordion-collapse" *ngIf="r.cols"
+                                                (click)="open(i)" aria-labelledby="headingOne"
+                                                data-bs-parent="#accordionExample">
+                                                <div class="accordion-body card-body">
+                                                    <div class="row">
+                                                        <div class="col-lg-12">
+                                                            <img src="http://localhost:9000{{r.image}}" alt="">
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 md-mb-50 mt-10">
-                        <!-- Intro Info Tabs-->
-                        <div class="intro-info-tabs">
-
-                            <div class="tab-content tabs-content" id="myTabContent">
-                                <div class="tab-pane tab fade show active" id="prod-overview" role="tabpanel"
-                                    aria-labelledby="prod-overview-tab">
-                                    <div class="content white-bg pt-30">
-                                        <!-- Cource Overview -->
-                                        <div class="course-overview">
-                                            <div class="inner-box">
-                                                <h4>Std 10th  Result 2020-21</h4>
-                                                
-                                                <img src="assets/images/cems/result10.jpg" alt="">
-                                            </div>
+                                    <div class="row mt-3" *ngIf="resultData.length>0">
+                                        <div class="col text-end">
+                                            <pagination-controls id="listing1" (pageChange)="pa = $event">
+                                            </pagination-controls>
                                         </div>
                                     </div>
                                 </div>
@@ -57,9 +84,9 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- End intro Courses -->
-    </div>
-    <!-- Main content End -->
+        </div>
+    </section>
+    <footer id="rs-footer" class="rs-footer">
+        <app-footer></app-footer>
+    </footer>
 </body>
-<app-footer></app-footer>
