--- a/src/app/basic/contact/contact.component.html
+++ b/src/app/basic/contact/contact.component.html
@@ -79,33 +79,38 @@
                                     the institute. </p>
                             </div>
                             <div id="form-messages"></div>
-                            <form id="contact-form" method="post" action="mailer.php">
+                            <form id="contact-form">
                                 <fieldset>
                                     <div class="row">
                                         <div class="col-lg-6 mb-35 col-md-6 col-sm-6">
                                             <input class="from-control" type="text" id="name" name="name"
-                                                placeholder="Name" required="">
+                                                placeholder="Name" [ngModelOptions]="{standalone: true}"
+                                                [(ngModel)]="contactModel.name">
                                         </div>
                                         <div class="col-lg-6 mb-35 col-md-6 col-sm-6">
                                             <input class="from-control" type="text" id="email" name="email"
-                                                placeholder="Email" required="">
+                                                placeholder="Email" [ngModelOptions]="{standalone: true}"
+                                                [(ngModel)]="contactModel.email">
                                         </div>
                                         <div class="col-lg-6 mb-35 col-md-6 col-sm-6">
-                                            <input class="from-control" type="text" id="phone" name="phone"
-                                                placeholder="Phone" required="">
+                                            <input class="from-control" type="number" id="conatct" name="conatct"
+                                                placeholder="conatct" [ngModelOptions]="{standalone: true}"
+                                                [(ngModel)]="contactModel.contact">
                                         </div>
                                         <div class="col-lg-6 mb-35 col-md-6 col-sm-6">
                                             <input class="from-control" type="text" id="subject" name="subject"
-                                                placeholder="Subject" required="">
+                                                placeholder="Subject" [ngModelOptions]="{standalone: true}"
+                                                [(ngModel)]="contactModel.subject">
                                         </div>
 
                                         <div class="col-lg-12 mb-50">
                                             <textarea class="from-control" id="message" name="message"
-                                                placeholder=" Message" required=""></textarea>
+                                                placeholder=" Message" [ngModelOptions]="{standalone: true}"
+                                                [(ngModel)]="contactModel.message"></textarea>
                                         </div>
                                     </div>
                                     <div class="form-group mb-0">
-                                        <input class="btn-send" type="submit" value="Submit Now">
+                                        <input class="btn-send" type="submit" (click)="saveContactUSData()">
                                     </div>
                                 </fieldset>
                             </form>
