--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -262,6 +262,8 @@
                         <ul class="dropdown-menu">
 
                             <li><a class="dropdown-item" (click)="openLinks('forms')">Forms</a> </li>
+                            <li><a class="dropdown-item" (click)="openLinks('report')">Reports</a> </li>
+
                             <li><a class="dropdown-item" routerLink="/more/magazine"
                                     routerLinkActive="active">Magazines</a> </li>
 
@@ -373,6 +375,8 @@
                                         <li class="menu-item-has-children"><a>More</a>
                                             <ul class="sub-menu">
                                                 <li><a (click)="openLinks('forms')">Forms</a> </li>
+                                                <li><a (click)="openLinks('report')">Reports</a></li>
+
                                                 <li><a routerLink="/more/magazine"
                                                         routerLinkActive="active">Magazines</a> </li>
                                                 <!-- <li><a routerLink="/resource/material" routerLinkActive="active">Study
@@ -513,6 +517,8 @@
                                             <li class="menu-item-has-children"><a>More</a>
                                                 <ul class="sub-menu">
                                                     <li><a (click)="openLinks('forms')">Forms</a> </li>
+                                                    <li><a (click)="openLinks('report')">Reports</a> </li>
+
                                                     <li><a routerLink="/more/magazine"
                                                             routerLinkActive="active">Magazines</a> </li>
 
