--- a/src/app/more/campus/campus.component.html
+++ b/src/app/more/campus/campus.component.html
@@ -365,7 +365,7 @@
                                                         </div>
                                                         <div class="col-lg-3 col-md-6 mb-30">
                                                             <div class="degree-wrap">
-                                                                <img src="assets/images/dummy.jpg" alt="">
+                                                                <img src="assets/images/degrees/dn institute of business.jpg" alt="">
                                                                 <div class="title-part">
                                                                     <h4 class="title ctitle">Shri D. N. Institute of Business Administration, Anand
                                                                     </h4>
@@ -458,7 +458,7 @@
                                                         </div>
                                                         <div class="col-lg-3 col-md-6 mb-30">
                                                             <div class="degree-wrap">
-                                                                <img src="assets/images/dummy.jpg" alt="">
+                                                                <img src="assets/images/degrees/ces performing art - dn campus.jpg" alt="">
                                                                 <div class="title-part">
                                                                     <h4 class="title ctitle">CES Performing Arts And Fine Arts Academy
                                                                     </h4>
@@ -480,7 +480,7 @@
                                                         </div>
                                                         <div class="col-lg-3 col-md-6 mb-30">
                                                             <div class="degree-wrap">
-                                                                <img src="assets/images/dummy.jpg" alt="">
+                                                                <img src="assets/images/degrees/it cell.jpg" alt="">
                                                                 <div class="title-part">
                                                                     <h4 class="title ctitle">IT Cell
                                                                     </h4>
