--- a/src/app/more/search/search.component.html
+++ b/src/app/more/search/search.component.html
@@ -673,7 +673,7 @@
                                                 <h2>B.B.A.</h2>
                                                 <div class="col-lg-3 col-md-6 mb-30">
                                                     <div class="degree-wrap">
-                                                        <img src="assets/images/dummy.jpg" alt="">
+                                                        <img src="assets/images/degrees/dn institute of business.jpg" alt="">
                                                         <div class="title-part">
                                                             <h6 class="title ctitle">Shri D. N. Institute of Business
                                                                 Administration, Anand
@@ -1535,7 +1535,7 @@
                                                 </div>
                                                 <div class="col-lg-3 col-md-6 mb-30">
                                                     <div class="degree-wrap">
-                                                        <img src="assets/images/dummy.jpg" alt="">
+                                                        <img src="assets/images/degrees/dn institute of business.jpg" alt="">
                                                         <div class="title-part">
                                                             <h6 class="title ctitle">Shri D. N. Institute of Business
                                                                 Administration, Anand
