--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -262,7 +262,8 @@
 
                             <li><a class="dropdown-item" (click)="openLinks('forms')">Forms</a> </li>
                             <li><a class="dropdown-item" (click)="openLinks('report')">Reports</a> </li>
-
+                            <li><a class="dropdown-item" routerLink="/more/news"
+                                routerLinkActive="active">News</a> </li>
                             <li><a class="dropdown-item" routerLink="/more/magazine"
                                     routerLinkActive="active">Magazines</a> </li>
 
@@ -375,7 +376,8 @@
                                             <ul class="sub-menu">
                                                 <li><a (click)="openLinks('forms')">Forms</a> </li>
                                                 <li><a (click)="openLinks('report')">Reports</a></li>
-
+                                                <li><a routerLink="/more/news"
+                                                    routerLinkActive="active">News</a> </li>
                                                 <li><a routerLink="/more/magazine"
                                                         routerLinkActive="active">Magazines</a> </li>
                                                 <!-- <li><a routerLink="/resource/material" routerLinkActive="active">Study
@@ -517,7 +519,8 @@
                                                 <ul class="sub-menu">
                                                     <li><a (click)="openLinks('forms')">Forms</a> </li>
                                                     <li><a (click)="openLinks('report')">Reports</a> </li>
-
+                                                    <li><a routerLink="/more/news"
+                                                        routerLinkActive="active">News</a> </li>
                                                     <li><a routerLink="/more/magazine"
                                                             routerLinkActive="active">Magazines</a> </li>
 
