--- a/src/app/home/section-courses/section-courses.component.html
+++ b/src/app/home/section-courses/section-courses.component.html
@@ -14,7 +14,8 @@
 
             <div class="home-community-board__grid-item">
                 <div class="home-community-board__grid-icon-wrapper">
-                    <img src="assets/images/cems/icon/1.png" alt="">
+                    <img src="assets/images/cems/icon/1.png"routerLink="/department/staff" routerLinkActive="active"
+                    class="btn-link" alt="">
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
@@ -25,7 +26,9 @@
 
             <div class="home-community-board__grid-item">
                 <div class="home-community-board__grid-icon-wrapper">
-                    <img src="assets/images/cems/icon/1.png" alt="">
+                    <img src="assets/images/cems/icon/1.png"
+                    routerLink="/department/staff" routerLinkActive="active"
+                    class="btn-link" alt="">
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
@@ -36,7 +39,8 @@
 
             <div class="home-community-board__grid-item">
                 <div class="home-community-board__grid-icon-wrapper">
-                    <img src="assets/images/cems/icon/1.png" alt="">
+                    <img src="assets/images/cems/icon/1.png"routerLink="/department/staff" routerLinkActive="active"
+                    class="btn-link" alt="">
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
@@ -47,7 +51,8 @@
 
             <div class="home-community-board__grid-item">
                 <div class="home-community-board__grid-icon-wrapper">
-                    <img src="assets/images/cems/icon/1.png" alt="">
+                    <img src="assets/images/cems/icon/1.png"routerLink="/department/staff" routerLinkActive="active"
+                    class="btn-link" alt="">
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description">
@@ -59,7 +64,8 @@
 
             <div class="home-community-board__grid-item">
                 <div class="home-community-board__grid-icon-wrapper">
-                    <img src="assets/images/cems/icon/1.png" alt="">
+                    <img src="assets/images/cems/icon/1.png"routerLink="/department/staff" routerLinkActive="active"
+                    class="btn-link" alt="">
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
@@ -70,7 +76,8 @@
 
             <div class="home-community-board__grid-item">
                 <div class="home-community-board__grid-icon-wrapper">
-                    <img src="assets/images/cems/icon/1.png" alt="">
+                    <img src="assets/images/cems/icon/1.png"routerLink="/department/staff" routerLinkActive="active"
+                    class="btn-link" alt="">
                 </div>
                 <div class="home-community-board__grid-stat-wrapper">
                     <p class="home-community-board__grid-stat-description"><a
