--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -92,7 +92,7 @@
                             <li>
                                 <i class="flaticon-email"></i>
                                 <a href="mailto:cems@cesociety.in" style="font-size:12px !important;">
-                                    cems@cesociety.in,</a>
+                                    cems@cesociety.in</a>
                             </li>
                             <li>
                                 <i class="flaticon-phone"></i>
@@ -106,10 +106,6 @@
                             <li class="login-register" style="font-size:12px !important;">
                                 <i class="fa fa-clock-o"></i>
                                 <a>Last Updated On : {{siteUpdate.updatedSite|date}}</a>
-                            </li>
-                            <li class="login-register" style="font-size:12px !important;">
-                                <i class="fa fa-users"></i>
-                                <a>Visitor:222500</a>
                             </li>
                         </ul>
                     </div>
