--- a/src/app/home/right-image-text/right-image-text.component.html
+++ b/src/app/home/right-image-text/right-image-text.component.html
@@ -1,97 +1,44 @@
-<!-- Choose Section Start -->
-<div id="facility" class="why-choose-us style2 gray-bg3 pt-20 pb-20 md-pt-30 md-pb-30">
+<div id="rs-about" class="rs-about style1 pt-100 pb-10 md-pb-70">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 order-last">
-                <div class="video-wrap md-mb-40">
-                    <img src="assets/images/cems/about.JPG" alt="">
-                    <!-- <a class="popup-videos" href="https://www.youtube.com/watch?v=atMUy_bPoQI">
-                        <i class="fa fa-play"></i>
-                    </a> -->
-                </div>
+            <div class="col-lg-6">
+                <iframe
+                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fcesociety&tabs=timeline&width=700&height=700&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                    width="700" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                    allowfullscreen="true"
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
-            <div class="col-lg-8">
-                <div class="sec-title2 mb-40">
-                    <!-- <div class="sub-title">Open Round Starts From 29th June 2022 onwards.</div> -->
-                    <h2 class="title purple-color">Reports </h2>
-                    <!-- <div class="desc pr-124 md-pr-15">
-                    <a href="http://www.spuvvn.edu/students_corner/admissions/" target="_blank">Students can fill online form  on S P University's website.
-                        For instructions and details kindly visit :</a>
-                    </div> -->
-                </div>
-                <div class="facilities-two">
-                    <div class="row">
-                        <div class="col-lg-6 mb-40 md-mb-25 col-md-6 single-facility">
-                            <div class="content-part">
-                                <div class="icon-part">
-                                    <!-- <img src="assets/images/icon.png" alt=""> -->
-                                    <i class="flaticon-arrow"></i>
-                                </div>
-                                <div class="text-part">
-                                    <h4 class="title"> <a href="assets/images/cems/Reports/Annual%20Report%2021-22%20Part%201.pdf" target="_blank">
-                                        Annual Report 2021-22 Part 1</a> </h4>
-                                </div>
+            <div class="col-lg-6 pt-60 md-pt-10 ">
+                <div class="notice-bord style1">
+                    <ul>
+                        <div class="row">
+                            <div class="title text-center">
+                                <h3 style="color: white; margin-bottom: 0px;">Latest News</h3>
                             </div>
-                            
-                           
-                            <div class="content-part">
-                                <div class="icon-part">
-                                    <i class="flaticon-arrow"></i>
-                                    
-                                </div>
-                                <div class="text-part">
-                                    <h4 class="title"> <a href="assets/images/cems/Reports/Annual%20Report%2021-22%20%20Part%202.pdf" target="_blank">Annual Report 2021-22 Part 2</a></h4>
-                                </div>
-                            </div>
-                            <div class="content-part">
-                                <div class="icon-part">
-                                    <i class="flaticon-arrow"></i>
-                                </div>
-                                <div class="text-part">
-                                    <h4 class="title"> <a href="assets/images/cems/Reports/CEMS%20Annual%20Report%202019-20%20Part%202.pdf" target="_blank">Annual Report 2019-20 Part-2</a></h4>
-                                </div>
-                            </div>
-                            <div class="content-part">
-                                <div class="icon-part">
-                                    <i class="flaticon-arrow"></i>
-                                </div>
-                                <div class="text-part">
-                                    <h4 class="title"><a href="assets/images/cems/Reports/CEMS%20Annual%20Report%202019-20_part%201.pdf" target="_blank">Annual Report 2019-20 Part-1</a></h4>
-                                </div>
+                            <div class="col-lg-12" *ngFor="let n of newsData ">
+                                <li class="wow fadeInUp mb-4" data-wow-delay="300ms" data-wow-duration="2000ms">
+                                    <div class="date"><span>{{n.date |date}}</span></div>
+                                    <div class="desc">
+                                        <div [innerHTML]="n.message"></div>
+                                        <a href="https://bapsanandmandir.co.in{{n.files}}" target="_blank"
+                                            *ngIf="n.files!='null'">
+                                            Download</a>
+                                    </div>
+                                </li>
                             </div>
                         </div>
-                        <div class="col-lg-6 mb-40 md-mb-25 col-md-6 single-facility">
-                           
-                            
-                            <div class="content-part">
-                                <div class="icon-part">
-                                    <i class="flaticon-arrow"></i>
-                                </div>
-                                <div class="text-part">
-                                    <h4 class="title"><a href="assets/images/cems/Reports/Annual%20Report%202018-19.pdf" target="_blank">Annual Report 2018-19</a></h4>
-                                </div>
-                            </div>
-                            <div class="content-part">
-                                <div class="icon-part">
-                                    <i class="flaticon-arrow"></i>
-                                </div>
-                                <div class="text-part">
-                                    <h4 class="title"><a href="assets/images/cems/Reports/Annual_Report_Part2.pdf" target="_blank">Annual Report 2017-18 - Part2</a></h4>
-                                </div>
-                            </div>
-                            <div class="content-part">
-                                <div class="icon-part">
-                                    <i class="flaticon-arrow"></i>
-                                </div>
-                                <div class="text-part">
-                                    <h4 class="title"><a href="assets/images/cems/Reports/Annual_Report_Part1.pdf" target="_blank">Annual Report 2017-18 - Part1</a></h4>
-                                </div>
-                            </div>
-                            
+                    </ul>
+                </div>
+                <div class="row mt-4">
+                    <div class="col text-center">
+                        <!-- <button type="submit"  routerLink="/more/news" style="align-items: center;">More News</button> -->
+                        <a routerLink="/more/news" routerLinkActive="active"
+                            class="btn btn-sm btn-outline-white mb-0">More News <i class="fa fa-arrow-right"
+                                aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- Choose Section End -->
+<!-- About Section End -->
